k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
  namespace: dev
  labels:
    app: netflix-clone
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: netflix-clone

  template:
    metadata:
      labels:
        app: netflix-clone

    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: netflix-clone
          image: 471112626077.dkr.ecr.us-west-1.amazonaws.com/netflix-clone:REPLACE_AT_DEPLOY
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
