k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone
  namespace: dev
spec:
  selector:
    app: netflix-clone
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
